--- a/index.css
+++ b/index.css
@@ -65,3 +65,57 @@ header{
     margin-left: 10px;
     width: 80px;
 }
+
+.navbar{
+    height: 70px;
+    font-family: Space Grotesk,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+}
+
+.nav-button{
+    background: #fff;
+    border: 0 solid;
+    font-size: .75rem;
+    font-weight: 700;
+    height: 70px;
+    margin-left: 15px;
+    padding: 0 0.375rem;
+}
+
+.login{
+    display: flex;
+    align-items: center;
+    font-family: Space Grotesk,ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    height: 70px;
+    margin-right: 20px;
+}
+
+.signup{
+    border: 0px rgba(223,229,230,var(--tw-border-opacity));
+    border-radius: .25rem;
+    font-size: .875rem;
+    font-weight: 700;
+    line-height: 1rem;
+    padding: .625rem 1.5rem;
+    width: auto;
+}
+
+.apply{
+    background: #dc1515;
+    border: 0px rgba(223,229,230,var(--tw-border-opacity));
+    border-radius: .25rem;
+    color: #fff;
+    margin: 0 0.5rem;
+    font-size: .875rem;
+    font-weight: 700;
+    line-height: 1rem;
+    padding: .625rem 1.5rem;
+    width: auto;
+}
+/* End of styling for header */
+
+.container{
+    background: url(images/man-and-woman-collaborating-in-tech-industry.jpg);
+    background-size: cover;
+    height: 800px;
+    width: 100%;
+}
